# fastapi-restapi

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/rules/: api-development.md
.devcontainer/: devcontainer.json  docker-compose.yml  init.sql
.githooks/: pre-commit
app/: main.py
app/application/dto/: user_dto.py
app/application/use_cases/user/: create_user.py  delete_user.py  get_user.py  list_users.py  update_user.py
app/domain/entities/: user.py
app/domain/exceptions/: user_exceptions.py
app/domain/repositories/: user_repository.py
app/infrastructure/database/: init_db.py  session.py
app/infrastructure/database/models/: user_model.py
app/infrastructure/repositories/: in_memory_user_repository.py  mysql_user_repository.py
app/presentation/api/: dependencies.py  error_handlers.py
app/presentation/api/v1/: router.py
app/presentation/api/v1/endpoints/: users.py
app/presentation/schemas/: user_schemas.py
tests/: conftest.py
tests/api/v1/: test_users.py
